# fark

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: fark.slint  fd.rs  main.rs  tray.rs
