[package]
name = "fark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3.2"
rfd = { version = "0.12", default-features = false, features = [ "xdg-portal" ] }
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
once_cell = "1.19"
rustix = { version = "0.38", features = ["process"] }
