[package]
name = "fark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5"
rfd = { version = "0.14", default-features = false, features = ["async-std", "xdg-portal"] }
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
rustix = { version = "0.38", features = ["process"] }
tray-icon = "0.13"
tao = "0.27"
once_cell = "1.19"
image = "0.25"
global-hotkey = "0.5"
console = "0.15"
number_prefix = "0.4"
